...
    <string name="authorLabel">Geschreven door:</string>
    <string name="addInFinished">Boek gelezen</string>
    <string name="added_to_finished_books">Toegevoegd aan gelezen boeken</string>
    <string name="removed_from_finished_books">Verwijderd uit gelezen boeken</string>
    <string name="added_to_read_books">Toegevoegd aan wachtrij</string>
    <string name="removed_to_read_books">Verwijderd uit wachtrij</string>
    <string name="moreText">Meer weergeven</string>
    <string name="lessText">Minder weergeven</string>
    <string name="no_description_found">Geen beschrijving van dit boek gevonden</string>
    <string name="cd_remove_button">This is the remove button</string>
    <string name="cd_loading_image">This is the loading image</string>
    <string name="cd_cover_image">This is the cover of the book</string>
    <string name="cd_statusImage">This is the status image</string>
...
