...
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/favoriteBooksContainer"
                        style="@style/yourBooksList_container"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
...
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/favoriteBooksTitle"
                            tools:itemCount="4"
                            tools:listitem="@layout/book_favorites_list_item" />

                        <Button
                            android:id="@+id/toFavoritesButton"
                            style="@style/yourBooksList_button"
                            android:text="@string/favoriteBooksList_button"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
...
                android:id="@+id/searchView"
                style="@style/circleView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/searchButton"
                    style="@style/circleViewIcon"
                    android:contentDescription="@string/search_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...
