<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:enabled="true"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share_menu"
        android:visible="true"
        app:showAsAction="ifRoom"
        />
</menu>