...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_add_to_favorites"
                style="@style/addToFavorites_button"
                android:onClick="@{()-> viewModelFavorites.insertBookFavorite(book)}"
                app:backgroundTint="@android:color/white"
                app:fabSize="mini"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailCover" />
...
